# stanly

./: .alias  .alias.sh  .clang-format  .clang-tidy  .clangd  .gitignore  .toolchain.cmake  CMakeLists.txt  CMakePresets.json  README.md  closures.py  compile_commands.json  generate-parser-symbols.sh  generate-parser.sh  generate_jump_table.cpp  generate_parser_skeleton.sh  generate_parser_symbols.sh  generate_symbol_tables.sh  process_build_output.py  repo.cmake  scope-graph.tree-sitter-query  test_repo.cmake
cmake/: FindCatch2.cmake  FindSparta.cmake  Findcxxopts.cmake  Findfmt.cmake  Findrange-v3.cmake  Findtree-sitter.cmake  build_all.cmake
cmake/repo/: configure_build_test.cmake  execute_workflow.cmake  make_dependency_graph.cmake  parse_args.cmake  run_linters.cmake  run_main.cmake  shared.cmake
cmake_modules/: add_target_project_options.cmake  add_target_sparta.cmake
ghc/: Makefile  haskell-unicode  hie.yaml  notes.md  stanly.cabal  test
ghc/app/: Main.hs  Spec.hs
ghc/app/Stanly/: ConcreteSemantics.hs  Eval.hs  Expr.hs  Monads.hs  Parser.hs
ghc/src/Stanly/: Abstract.hs  Combinators.hs  Concrete.hs  ConcreteSemantics.hs  Env.hs  Eval.hs  Exc.hs  Exec.hs  Expr.hs  Fixed.hs  Fmt.hs  IdiomBrackets.hs  Interpreter.hs  Language.hs  MachineState.hs  Mixins.hs  Monads.hs  Parser.hs  Sema.hs  Store.hs  Unicode.hs  Val.hs  debug.hs
ghc/src/Stanly/Val/: Abstract.hs  Concrete.hs  Internal.hs  Value.hs
ghc/test/: Spec.hs  addition.adi  fibonacci.adi  polynomial.adi  recursion.adi
ghc/tests/: .ifthenelse-abstract.adi  .rec-abstract.adi  .recursion-abstract.adi  Spec.hs  abstract-arithmethic.adi  abstract-binding.adi  abstract-truncated.adi  abstract-updates.adi  concrete.adi  dead-code.adi  ifthenelse-abstract.adi  ifthenelse.adi  one-plus-two-abstract.adi  one-plus-two.adi  polynomial-abstract.adi  polynomial.adi  recursion-abstract.adi  recursion.adi  test.sh  trace.adi  trace.adi_
include/: Concepts.h  analyse.h  assemble.h  cfg_assembler.h  compiler.h  domain.h  first_order.h  handle.h  ksar.h  parse.h  parse2.h  stanly-assert.h  stanly-concepts.h  stanly-utils.h  string-index.h  symbols.h  syntax.h  tree.h
src/: .parser_skeleton.cpp  CMakeLists.txt  analyse.cpp  analyse.h  compiler.cpp  cursor.cpp  cursor.h  cursor.hpp  domain.h  domains.h  field-names.h  fields.h  first_order.cpp  firstorder-analyse.h  firstorder-analysis.cpp  firstorder-cursor.cpp  firstorder-execution_step.cpp  firstorder-format.cpp  firstorder-format.h  firstorder-graph.cpp  firstorder-lang.h  firstorder-parse-statement.cpp  firstorder-parse.cpp  firstorder-parser.cpp  firstorder-parser.h  firstorder-syntax.h  firstorder.cpp  firstorder.h  graph.h  handle.h  handle_pool.h  inp.txt  iterator.h  ksar.cpp  language.h  lookup-symbols.cpp  metaprogramming.h  parse-symbols.cpp  parse-symbols.hpp  parse.cpp  (+46 more)
src/cmake/: project_props.cmake
src/include/: analysis.h  firstorder-api.h  firstorder.h  make_parser.h  stanly-api.h  stanly.h
test/: CMakeLists.txt  firstorder.py  firstorder_test.cpp  test-analyse.cpp  test-firstorder.cpp  test-format.cpp  test-parse.cpp
