cabal-version:      2.4
name:               stanly
version:            0.1.0.0
synopsis:           a static analyser
homepage:
author:             Kai Daniel
maintainer:         kaiingodaniel@gmail.com
category:           Development

common shared-properties
  default-language: GHC2021
  build-depends:
    parsec, base, mtl, transformers
  ghc-options:
    -Wall -Wno-star-is-type -Wno-unused-do-bind -fprint-explicit-foralls
  default-extensions: UnicodeSyntax, LambdaCase, StarIsType, BlockArguments, GADTs, RecordWildCards


library stanly-lib
    import:          shared-properties
    exposed-modules: 
      Stanly.Monads,
      Stanly.Fmt,
      Stanly.Interpreter,
      Stanly.Unicode,
      Stanly.Mixins,
      Stanly.Language,
      Stanly.Env,
      Stanly.Parser,
      Stanly.Store,
      Stanly.Val.Value,
      Stanly.Val.Internal,
      Stanly.Val.Concrete,
      Stanly.Exc
    hs-source-dirs:  src
    build-depends:   haskell-src-meta, QuickCheck, list-t, containers
      
executable stanly
    import:           shared-properties
    main-is:          Main.hs
    build-depends:    stanly-lib, optparse-applicative
    hs-source-dirs:   app
     

executable stanly-test
-- test-suite stanly-test
    import:           shared-properties
    -- type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   tests
    build-depends:    stanly-lib, hspec, QuickCheck
